--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.3.4",
-    "astro": "^4.8.6",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^9.0.2",
+    "astro": "^5.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
